# heapless

./: .gitignore  LICENSE  README.md
compiler/: compiler.cabal  notes.txt
compiler/app/: Main.hs
compiler/data/: prelude.rs  runtime.c
compiler/demo/: main.core  main.surf
compiler/src/: Compile.hs  Util.hs
compiler/src/Core/: Check.hs  Parse.hs  Syntax.hs  Term.hs  Uncurry.hs  Value.hs
compiler/src/Core/Norm/: Eval.hs  Reify.hs  Term.hs  Value.hs
compiler/src/LL/: Codegen.hs  Term.hs
compiler/src/Surface/: Alpha.hs  Check.hs  Parse.hs  Syntax.hs
compiler/src/Surface/Check/: Ctxt.hs  Monad.hs  Rules.hs
compiler/src/UC/: Free.hs  LambdaLift.hs  Name.hs  Term.hs
compiler/test/: Main.hs
examples/: README.md  adder.core  branch.core  loop.core  pairs.core
examples/correct/: adder.core  branch.core  compose.core  compute.core  func-pair.core  functor.core  identity.core  io-monad.core  loop.core  monad.core  nothing.core  recursive-higher.core  type-level.core
examples/incorrect/: linear-bind.core  linear-dup.core  recursive-higher.core
examples/surface/: new.hpl  std.hpl  test.hpl  uart.hpl
extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
extension/syntaxes/: heapless.tmLanguage.json
paper/: .gitignore  main.tex  makefile  references.bib
